# class

./: APM 설치.txt  README.md
Android/socket Example/AiotClient/: settings.gradle
Android/socket Example/TelnetClient/: README.md  settings.gradle.kts
Arduino/: README.md  gettime.txt
Arduino/PL2303_Prolific_DriverInstaller_v1_12_0/: PL2303_DriverInstallerv1.12.0_ReleaseNote.txt
Arduino/esp8266/: README.md
Arduino/esp8266/wifi_client_v1_idpass/: README.md  wifi_client_v1_idpass.ino
Arduino/esp8266/wifi_client_v2_led/: README.md  wifi_client_v2_led.ino
Arduino/examples/BT-HC06-Basic/: BT-HC06-Basic.ino  README.md
Arduino/examples/DigitalReadSerial_button_led/: DigitalReadSerial_button_led.ino  README.md
Arduino/examples/DigitalReadSerial_button_led_micros/: DigitalReadSerial_button_led_micros.ino
Arduino/examples/iot_client_bluetooth_dcMotor/: README.md  iot_client_bluetooth_dcMotor.ino
Arduino/examples/iot_client_bluetooth_dcMotor_sql/: iot_client_bluetooth_dcMotor_sql.ino
Arduino/examples/ros_serial_arduino/: README.md  ros_serial_arduino.ino
Arduino/examples/wifi_lcd_cds_servo_detach_dht11_clock_pwm_dcmotor/: README.md  wifi_lcd_cds_servo_detach_dht11_clock_pwm_dcmotor.ino
Arduino/iot_client_sql/: iot_client.c  iot_client_sql.c  iot_server.c
Arduino/libraries/MQ135/: MQ135.h
Arduino/libraries/project/: project.ino
Arduino/project/MQ135/: MQ135.ino
Arduino/project/project/: project.ino
C++/Color/: Color.sln  README.md
C++/Color/0812Pink/: 0812Pink.cpp  0812Pink.vcxproj  0812Pink.vcxproj.filters  C++Lecture_x_Quiz_Changmin.cpp  C++_Lecture_04_Pointer.cpp  C++_Lecture_05_GUGUDANFromImage.cpp  C++_Lecture_05_PointerFromImage.cpp  C++_Lecture_05_PointerSwap.cpp  C++_Lecture_06_DrawPixels.cpp  C++_Lecture_07_Function.cpp  myproject.cpp  (+21 more)
Linux/BSP/: README.md  start.S_v0  test_mysyscall_led_func.c
Linux/ubuntu/: APM 설치.txt  MariaDB 실습.txt  samba_nfs 설정.txt  ubuntu kernel upgrade.txt  ubuntu20.04 설치.txt  우분투 로그인 후  black screen 조치.txt
Python/: class.py  imagetrack.py  matlab.mat
Python/Images/: Thumbs.db
Python/source_py/: 00.intro.py  01.basic.py  01.basic_JeongHo.py  10.image_proc_professor.py  10.image_proc_professor_2.py  11.find_shapes.py  gui.py
QT/: README.md
QT/AiotClientQt/: AiotClient.qrc  AiotClientQt.pro  AiotClientQt.pro.user.0a1b947  AiotClientQt.pro.user.fe24901  cameracapture.cpp  cameracapture.h  keyled.cpp  keyled.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  socketclient.cpp  socketclient.h  tab1devcontrol.cpp  tab1devcontrol.h  tab1devcontrol.ui  tab2socketclient.cpp  tab2socketclient.h  tab2socketclient.ui  tab3controlpannel.cpp  tab3controlpannel.h  tab3controlpannel.ui  tab4chartplot.cpp  tab4chartplot.h  tab4chartplot.ui  tab5database.cpp  tab5database.h  tab5database.ui  tab6webcam.cpp  tab6webcam.h  tab6webcam.ui  tab6webcamera.cpp  tab6webcamera.h  tab6webcamera.ui  tab7camsecurity.cpp  tab7camsecurity.h  tab7camsecurity.ui
QT/CustomWidget/: mainwidget.cpp
QT/build-AiotClientQt-Desktop_Qt_5_14_2_GCC_64bit-Debug/: AiotClientQt  Makefile  moc_keyled.cpp  moc_mainwidget.cpp  moc_tab1devcontrol.cpp
QT/build-CustomWidget-Desktop_Qt_5_14_2_GCC_64bit-Debug/: Makefile
QT/testWebview/: mainwidget.cpp  mainwidget.h  mainwidget.ui  testWebview.pro
QtExamples/: README.md
QtExamples/AiotClientQt/: AiotClientQt.pro  keyled.cpp  keyled.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  socketclient.h  tab1devcontrol.cpp  tab1devcontrol.h  tab1devcontrol.ui  tab2socketclient.cpp
QtExamples/CustomWidget/: mainwidget.h
QtExamples/build-AiotClientQt-Desktop_Qt_5_14_2_GCC_64bit-Debug/: ui_mainwidget.h  ui_tab1devcontrol.h
QtExamples/build-CustomWidget-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CustomWidget  moc_mainwidget.cpp
RaspberryPi/: Raspberry Pi Datasheets.url  Raspberry Pi hardware - Raspberry Pi Documentation.url  arm crossbuild-툴체인 설치.txt  mount.sh  profile  설치.txt
RaspberryPi/u-boot/: 20. 부트 폴더 - 라즈베리 파이 문서(2021.7 이전).url  boot_cmd.txt  for_led.sh  gpiokey.c  gpioled.c  gpip_test 명령.txt
TCPIP_Src/Chapter1/: README.md  hello_client.c  hello_server.c
TCPIP_Src/Chapter10/: echo_mpserv.c
TCPIP_Src/Chapter18/: thread4.c
TCPIP_Src/Chapter2/: README.md
TCPIP_Src/Chapter3/: README.md
TCPIP_Src/Chapter4/: README.md
TCPIP_Src/Chapter7/: README.md
TCPIP_Src/iot_client_sql/: Makefile  iot_client_sql
device_driver/drivers/: README.md
mysql_lect/: ---MySQL Korea---.url  MySQL -- MySQL 8.0 C API Developer Guide -- 4 C API Function Reference.url  MySQL C API programming tutorial.website
mysql_lect/html/: index.html  sensorGraph.php
mysql_lect/iotdb_query_c/: st_db.c
openCV-4-5-2/: openCV-4-5-2_ubuntu20.04.txt
ros/: README.md  turtlebot_manpage.url
ros/Android/: README.md
ros/Arduino/: README.md
ros/catkin/: README.md
ros/설치/: README.md
ros/예제들/Turtlebot예제/bot3_kccistc_service_socket/: CMakeLists.txt  package.xml
ros/예제들/Turtlebot예제/bot3_kccistc_service_socket/src/: gpio_client.cpp  gpio_server.cpp  gpio_socketToRos.cpp
ros/예제들/Turtlebot예제/bot3_kccistc_service_srv/: CMakeLists.txt  package.xml
ros/예제들/Turtlebot예제/bot3_kccistc_service_srv/src/: gpio_client.cpp  gpio_server.cpp
ros/예제들/Turtlebot예제/cmd_vel_dir/: CMakeLists.txt  package.xml
ros/예제들/Turtlebot예제/cmd_vel_dir/src/: cmd_vel_dir.cpp
ros/예제들/Turtlebot예제/cmd_vel_keyboard_thread/: CMakeLists.txt  package.xml
ros/예제들/Turtlebot예제/cmd_vel_keyboard_thread/src/: cmd_vel_keyboard.cpp
ros/예제들/Turtlebot예제/cmd_vel_topic/: CMakeLists.txt  package.xml
ros/예제들/Turtlebot예제/cmd_vel_topic/msg/: Cmd_vel_msg.msg
ros/예제들/Turtlebot예제/cmd_vel_topic/src/: cmd_vel_topic_pub.cpp  cmd_vel_topic_sub.cpp
ros/예제들/Turtlebot예제/ros_serial_topic/: CMakeLists.txt  package.xml
ros/예제들/Turtlebot예제/ros_serial_topic/src/: ros_serial_uno.cpp
ros/응용/: README.md
samba/: README.md  samba_nfs 설정.txt
stm/: STM32CubeIDE - Integrated Development Environment for STM32 - STMicroelectronics.url
stm/stm32 매뉴얼/: README.md
ubuntu/copy.d/: copy0.c  copy1.c
ubuntu20.04_iso/: README.md  Ubuntu Releases.url  ubuntu kernel upgrade.txt  ubuntu20.04 설치.txt
(+936 files in other folders)
