<?xml version="1.0"?>
<package>
  <name>bot3_kccistc_service</name>
  <version>0.1.0</version>
  <description>bot3_gpio_service package to learn the service</description>
  <license>Apache License 2.0</license>
  <author email="kcci@kccistc.net">Yoonseok Pyo</author>
  <maintainer email="kcci@kccistc.net">Yoonseok Pyo</maintainer>
  <url type="website">http://kccistc.net</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <export></export>
</package>
