cmake_minimum_required(VERSION 3.0.2)
project(cmd_vel_keyboard)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
catkin_package(CATKIN_DEPENDS roscpp std_msgs)
include_directories(${catkin_INCLUDE_DIRS})
add_executable(cmd_vel_keyboard src/cmd_vel_keyboard.cpp)
target_link_libraries(cmd_vel_keyboard ${catkin_LIBRARIES})
