<?xml version="1.0"?>
<package>
  <name>ros_serial_topic</name>
  <version>0.0.1</version>
  <description>The ros_serial_topic package</description>
  <license>Apache License 2.0</license>
  <author email="kcci@kccistc.net">embsys</author>
  <maintainer email="kcci@kccist.net">embsys</maintainer>
  <url type="website">http://kccistc.net</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
